# obs-syphon-server

./: .gitignore  .gitmodules  BUILD.md  BUILD_SUCCESS.md  CI_ISSUES_RESOLVED.md  CI_README.md  CI_SETUP_COMPLETE.md  CMakeLists.txt  CMakePresets.json  FINAL_STATUS.md  FORMATTING_FIXES_COMPLETE.md  INSTALLATION.md  README.md  README_CLEAN.md  TECHNICAL_DESIGN.md  buildspec.json  install.sh  release.sh  setup.sh
.github/scripts/: .Brewfile  build-macos  package-macos  test-ci
.github/workflows/: build-project.yaml  build.yml
cmake/macos/: compilerconfig.cmake
cmake/macos/resources/: postinstall
data/locale/: en-US.ini
src/: SyphonOpenGLServer.h  SyphonServerBase.h  obsconfig.h  plugin-main.c  plugin-support.c.in  plugin-support.h  syphon-filter.mm  syphon-publisher.h  syphon-publisher.mm  syphon-server.h  syphon-server.mm  syphon-tools.h  syphon-tools.mm  syphon_common.hpp  syphon_common.mm  syphon_filter.m  syphon_main_server.mm  syphon_output.mm
